Allow building on bungeecord <= 1.21